kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yogapriya-site
  labels:
    app: yogapriya-site
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: yogapriya-site
